# astroberry-server-wui

./: CMakeLists.txt  README.md
debian/: control  postinst  postrm  prerm
files/: astroid.crt  astroid.key  astroid_ssl
files/html/: 404.html  500.html  index.html  panels.html
files/indiwebmanager/: indiwebmanager.service
files/novnc/: index.html  novnc.service
